# refweaver

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  TODO.md  alembic.ini  compose.yml  docker-entrypoint.sh  pyproject.toml  quick_test.py  requirements.txt  test_bibtex.py  test_perplexity.py  test_title_debug.py  test_title_enrichment.py  tests.ipynb
.github/workflows/: publish-image.yml
.planning/: STATE.md
.planning/quick/1-endpoints-have-received-a-few-updates-si/: 1-SUMMARY.md
alembic/: env.py
alembic/versions/: 5e977e31cd25_widen_articles_external_id_to_512.py  ab1d2e193ba4_init.py  e55d5784cbfc_widen_evaluations_article_id_to_256.py
docs/: API.md  TODO.md  compose.yml
docs/plans/: 2026-03-02-analyze-mode-removal-design.md  2026-03-02-analyze-mode-removal-implementation.md  2026-03-02-api-endpoint-coverage-design.md  2026-03-02-api-endpoint-coverage-implementation.md  2026-03-02-api-shared-engine-design.md  2026-03-02-api-shared-engine-implementation.md  2026-03-02-queued-run-mode-optional-design.md  2026-03-02-queued-run-mode-optional.md  2026-03-03-request-body-replay-implementation.md  2026-03-05-containerize-backend-podman-compose.md  2026-03-05-pyright-migration-design.md  2026-03-05-pyright-migration.md  2026-03-05-sentence-serialization-guard-design.md  2026-03-05-sentence-serialization-guard-implementation.md
src/: __init__.py
src/refweaver/: analyzer.py  bibtex.py  dedup.py  enrich.py  evaluation_models.py  formatting.py  http_identity.py  jobs.py  llm.py  models.py  pdf_extract.py  pdf_sources.py  queue.py  rate_limit.py  retry.py  search.py  search_with_fallback.py  text_utils.py  timing.py  web_fetch.py  worker.py  workflows.py
src/refweaver/adapters/: __init__.py  openalex.py  perplexity.py  scholarly.py  semantic_scholar.py
src/refweaver/api/: __init__.py  dependencies.py  errors.py  main.py  middleware.py  reporting.py  schemas.py  settings.py
src/refweaver/api/routes/: analyze.py  enrich.py  health.py  jobs.py  report.py  runs.py  search.py
src/refweaver/db/: README.md  __init__.py  models.py  persist.py  session.py
tests/: conftest.py  test_analyzer.py  test_api.py  test_api_db_session.py  test_api_engine_lifecycle.py  test_api_routes_db.py  test_db.py  test_enrich.py  test_http_identity_headers.py  test_jobs.py  test_llm.py  test_middleware.py  test_models.py  test_queue.py  test_retry.py  test_semantic_scholar.py  test_text_utils.py  test_web_fetch.py  test_worker.py  test_workflows.py
tests/api/: test_health.py
tests/fixtures/: sample_texts.py
