[project]
name = "refweaver"
version = "0.1.0"
description = "Scientific manuscript reference analysis tool"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Diego Muñoz" }]
keywords = ["scientific", "manuscript", "references", "citations", "academic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pydantic-ai>=0.0.1",
    "semanticscholar>=0.11.0",
    "pyalex>=0.20.0",
    "scholarly>=1.7.11",
    "loguru>=0.7.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.32.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "nltk>=3.8.0",
    "pymupdf>=1.23.0",
    "redis>=5.0.0",
    "rq>=1.16.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "tabulate>=0.9.0",
    "pandas>=2.0.0",
]

[project.scripts]
refweaver = "refweaver.__main__:main"
refweaver-worker = "refweaver.worker:main"
refweaver-api = "refweaver.api.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/refweaver"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF",
    "T20",
]
ignore = [
    "E501", # Line length handled by formatter
    "N812", # Lowercase imported as non-lowercase (needed for selenium expected_conditions as EC)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
show_error_codes = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing"
